[package]
name = "fltk-accesskit"
version = "0.2.1"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "fltk accesskit adapter made to work with the fltk gui crate"
repository = "https://github.com/fltk-rs/fltk-accesskit"
documentation = "https://docs.rs/fltk-accesskit"
keywords = ["gui", "ui", "accessibility"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
accesskit = { version = "0.21"}
fltk = "1.5.14"

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { version = "0.29" }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { version = "0.22" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = { version = "0.17" }